@@ -1,5 +1,13 @@
 FLa4a NEWS
 
+CHANGES IN FLa4a 0.200.x:
+
+	NEW FEATURES:
+		added a generalized cross valiation score to the fitSumm information 
+		message about predictions turned off by default
+	BUG FIXES:
+		plot(fit, indices) legend added 
+
 CHANGES IN FLa4a 0.150.x:
 
 	NEW FEATURES:
